--- a/restaurant.html
+++ b/restaurant.html
@@ -16,11 +16,11 @@
             <input type="text" class="input input-address" placeholder="Адрес доставки">
             <div class="buttons">
                 <button class="button button-primary">
-                    <img src="/img/user.svg" alt="user" class="button-icon">
+                    <img src="img/user.svg" alt="user" class="button-icon">
                     <span class="button-text">Войти</span>
                 </button>
                 <button class="button" id="cart-button">
-                    <img src="/img/shopping-cart.svg" alt="shopping-cart" class="button-icon">
+                    <img src="img/shopping-cart.svg" alt="shopping-cart" class="button-icon">
                     <span class="button-text">Корзина</span>
                 </button>
             </div>
